# raytracer-cpp

./: CMakeLists.txt  README.md
output/: anit-alias.ppm  diffuse-no-shadow-acne.ppm  diffuse.ppm  fuzz.ppm  gamma.ppm  image.ppm  metal.ppm
src/: color.h  main.cpp
src/utils/: camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  intervals.hpp  material.hpp  ray.h  ray.hpp  vec3.hpp
src/utils/shapes/: sphere.hpp
